--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			</div>
 		</header>
 
+		<button id="btn">Click me</button>
+
 		<script src="./dist/js/app.min.js"></script>
 	</body>
 </html>
